
interface:
- time limit of SCIP-infinity is converted to LPI-infinity when setting it
- removed SCIPvarGetLbAtIndex() and added SCIPgetVarLbAtIndex()
- removed SCIPvarGetUbAtIndex() and added SCIPgetVarUbAtIndex()
- removed SCIPVarGetBdAtIndex() and added SCIPgetVarBdAtIndex()
- removed SCIPvarWasFixedAtIndex() and added SCIPgetVarWasFixedAtIndex()
- new command line parameter -v to print detailed build options

Makefile:
- revise sub-makefiles for MSVC on MinGW
- fix bug in 'dll' target
- make shared libraries aware of their dependencies
- link binary to shared libs when compiling with SHARED=true
- 'make install' copies now all header files

SCIP version 3.2.1
==================

features:
- new interactive shell command "write history" to write the command line history (only when compiled with Readline)
- several improvements of SCIP-Jack (STP application): extended presolving for STP variants, STP-specific branching
  rule, dual heuristic to generate initial LP relaxation
  SCIP-Jack is now competitive with problem specific state-of-the-art solvers on several well-known STP variants,
  e.g., the (rooted) prize-collecting Steiner tree problem.
- MultiObjective application renamed to PolySCIP; several improvements: better command line argument processing,
  overhaul of much of the source code, installation via CMake
- extended python interface supporting callbacks and linear and quadratic expressions

parameters:
- new parameter misc/transsolorig for transfering transformed solutions to the original space (default: true)
- new "force" parameter in (root)redcost propagator to run the propagator also with active pricers
- new parameter propagating/rootredcost/onlybinary to propagate root reduced costs of binary variables only
- new parameter constraints/sos1/perfimplanalysis to perform an implication graph analysis to deduce variable fixings and
  additional SOS1 constraints (this parameter replaces the old parameter constraints/sos1/updateconflpresol)